Revert #2368 (Workaround to IDEA-301084) (#2369)
Revert #2368 (Workaround to IDEA-301084)